--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="col-md-6">
                             <h5 class="border-bottom pb-2">Nuestra Historia</h5>
-                            <p>Don Galleto nació de la pasión por la repostería y el deseo de ofrecer galletas artesanales de la más alta calidad. Fundada en 2020, nuestra empresa se ha dedicado a crear recetas únicas que deleitan los paladares más exigentes.</p>
+                            <p>Gajetopedia nació de la pasión por la repostería y el deseo de ofrecer galletas artesanales de la más alta calidad. Fundada en 2020, nuestra empresa se ha dedicado a crear recetas únicas que deleitan los paladares más exigentes.</p>
                             <p>Cada galleta es elaborada con ingredientes frescos y de la mejor calidad, siguiendo recetas tradicionales que han pasado de generación en generación.</p>
                         </div>
                     </div>
@@ -25,7 +25,7 @@
                     <div class="row mb-4">
                         <div class="col-12">
                             <h5 class="border-bottom pb-2">Nuestra Misión</h5>
-                            <p>En Don Galleto, nuestra misión es proporcionar galletas artesanales de la más alta calidad, elaboradas con ingredientes frescos y recetas tradicionales. Nos esforzamos por ofrecer productos que no solo sean deliciosos, sino también saludables y sostenibles.</p>
+                            <p>En Galletopedia, nuestra misión es proporcionar galletas artesanales de la más alta calidad, elaboradas con ingredientes frescos y recetas tradicionales. Nos esforzamos por ofrecer productos que no solo sean deliciosos, sino también saludables y sostenibles.</p>
                         </div>
                     </div>
                     
