--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
         </div>
     </nav>
 
-    <!-- Flash Messages -->
+    <!-- Flash Messages 
     <div class="container mt-3">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
@@ -122,7 +122,7 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-    </div>
+    </div>-->
 
     <!-- Main Content -->
     {% block content %}{% endblock %}
