--- a/templates/inventario/base.html
+++ b/templates/inventario/base.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <!-- Main content -->
+            <!-- Main content 
             <div class="col-md-9 col-lg-10 content">
                 <div class="flash-messages">
                     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -78,7 +78,7 @@
                 </div>
 
                 {% block content %}{% endblock %}
-            </div>
+            </div>-->
         </div>
     </div>
 
