--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Galletopedia</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('main.index') }}">Inicio</a>
           </li>
           <li class="nav-item">
@@ -48,10 +51,6 @@
           </li>
           {% endif %}
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
         {% if not current_user.is_authenticated %}
         <a href="{{ url_for('auth.login') }}" class="btn btn-danger ms-2">Login</a>
         {% endif %}
@@ -83,7 +82,7 @@
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase">Contacto</h5>
           <ul class="list-unstyled">
-            <li><i class="bi bi-envelope"></i>gekastore13@gmail.com</li>
+            <li><i class="bi bi-envelope"></i>galletopedia@gmail.com</li>
             <li><i class="bi bi-phone"></i> +123 456 7890</li>
             <li><i class="bi bi-geo-alt"></i> León, Guanajuato México</li>
           </ul>
@@ -91,9 +90,9 @@
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase">Síguenos</h5>
           <div class="d-flex justify-content-center">
-            <a href="https://www.instagram.com/gekastoremx/" class="btn btn-outline-dark btn-floating m-1"
+            <a href="#" class="btn btn-outline-dark btn-floating m-1"
               target="_blank" rel="noopener noreferrer">
-              <img src="static/img/instagram.png" alt="Instagram" width="40" height="40">
+              <img src="static/img/instagram.jpeg" alt="Instagram" width="40" height="40">
             </a>
           </div>
         </div>
