--- a/templates/main/misPedidos.html
+++ b/templates/main/misPedidos.html
@@ -10,6 +10,7 @@
       <table class="table align-middle m-0">
         <thead class="bg-choco text-white">
           <tr>
+            <th>N° Pedido</th>
             <th>Fecha Pedido</th>
             <th>Receta</th>
             <th>Cantidad</th>
@@ -21,6 +22,7 @@
         <tbody>
           {% for pedido in pedidos %}
           <tr class="{% if pedido.estado_pedido == 'Cancelado' %}table-danger{% elif pedido.estado_pedido == 'Entregado' %}table-success{% endif %}">
+            <td>N°{{ pedido.id }}</td>
             <td>{{ pedido.fecha_pedido.strftime('%d/%m/%Y %H:%M') }}</td>
             <td>{{ pedido.nombre_receta }}</td>
             <td>{{ pedido.cantidad }}</td>
