--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <div class="row">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         {% if products %}
             {% for product in products %}
                 {% include 'productos.html' %}
