Correcion carga de insumos en una nueva receta

--- a/templates/recetas/modal_crear.html
+++ b/templates/recetas/modal_crear.html
@@ -71,7 +71,7 @@
                             </div>
                             <div class="col-md-4">
                                 <button type="button" id="btn-agregar-rapido-crear" class="btn btn-primary w-100" 
-                                        onclick="agregarIngredienteRapido('crear')" disabled>
+                                        onclick="agregarIngredienteNuevaReceta()" disabled>
                                     Agregar Insumo
                                 </button>
                             </div>
